welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:10: error: expected start of definition
	override def run() {
                 ^MethodsDogHouse:41: error: Unmatched closing brace '}' ignored here
}
^